--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                         <p class="result-text"><strong>Avg VMs per Host:</strong> <span id="vmsPerHost"></span></p>
                         <p class="result-text advanced-only"><strong>Avg IOPS per VM:</strong> <span id="avgIOPSPerVM"></span></p>
                         <p class="result-text advanced-only"><strong>Total IOPS Required:</strong> <span id="totalIOPS"></span></p>
+                        <p class="result-text advanced-only" style="display: none;><strong>Total Storage IOPS:</strong> <span id="totalStorageIOPS"></span></p>
                         <p class="result-text"><strong>Total Storage Required (TB):</strong> <span id="totalStorageRequired"></span></p>
                         <p class="result-text"><strong>Total Configured Storage (TB):</strong> <span id="totalConfiguredStorage"></span></p>
                         <p class="result-text"><strong>Total Used Capacity (TB):</strong> <span id="effectiveCapacity"></span></p>
